syntax = "proto3";

package myservice;
option go_package = "myapp/myservice";

service MyService {
    rpc StreamRequests (stream MyRequest) returns (stream MyResponse);
}

message MyRequest {
    string data = 1;
}

message MyResponse {
    string message = 1;
}
